# Rani-Pokhari

./: .gitignore  CMakeLists.txt  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  README.md  build.bat
Dependencies/lib/Debug/: IrrXMLd.lib  unit.exp  unit.lib  zlib.exp  zlibd.lib  zlibstaticd.lib
Dependencies/lib/Release/: IrrXML.lib  assimp.exp  unit.exp
includes/: Camera.h  CubeMap.h  IndexBuffer.h  Mesh.h  Model.h  Renderer.h  Shaders.h  Textures.h  VertexBuffer.h  VertxBufferLayout.h  WaterFrameBuffer.h  framebuffer.h  zbuffer.hpp
includes/Math/: matrix.h  vec.h
resources/models/: Raanipokhari.mtl  RaanipokhariWithtree.mtl  Raanipokhari_stone base.mtl  compoundwithtree.mtl  mandir.mtl  stone.mtl  water.fbx  water.mtl
resources/models/Gajur/: Gajur.fbx  Gajur.mtl
resources/models/Temple/: rani final.mtl
resources/shaders/: cubeMap.shader  lamp.glsl  light.glsl  lightmap.glsl  main.shader  model.glsl  modelTexture.glsl  water.glsl  zvertex.glsl
src/: Camera.cpp  CubeMap.cpp  IndexBuffer.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Shaders.cpp  Textures.cpp  VertexArray.cpp  VertexBuffer.cpp  framebuffer.cpp  main.cpp  math.cpp
